More contrast tweeks and fixed a couple ARIA tags

--- a/static/src/scss/_groups.scss
+++ b/static/src/scss/_groups.scss
@@ -5,5 +5,5 @@
   background: $gray-100;
   border-radius: 4px;
   border: 1px solid $gray-300;
-  color: $gray-600;
+  color: $gray-700;
 }
